--- a/TrinityCreator/ItemPreview.xaml
+++ b/TrinityCreator/ItemPreview.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d">
     <UserControl.Resources>
         <l:ValueToVisibilityConverter x:Key="valueVisibilityConverter"/>
+        <l:WeaponSpeedToStringConverter x:Key="weaponSpeedToStringConverter"/>
     </UserControl.Resources>
 
     <StackPanel>
@@ -21,19 +22,19 @@
                 </DockPanel>
             
                 <!-- Only visible on weapon item -->
-                <StackPanel Name="weaponPanel">
+                <StackPanel Visibility="{Binding DamageInfo.Dps, Converter={StaticResource valueVisibilityConverter}}">
                     <DockPanel>
                         <TextBlock Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0">
                             <TextBlock Text="{Binding DamageInfo.MinDamage}" />
                             <TextBlock Text="-" />
                             <TextBlock Text="{Binding DamageInfo.MaxDamage}" />
                         </TextBlock>
-                        <Label Name="weaponSpeedLbl" Content="{Binding DamageInfo.Speed}" Foreground="White" FontSize="14" HorizontalAlignment="Right"/>
+                        <Label Name="weaponSpeedLbl" Content="{Binding DamageInfo.Speed, Converter={StaticResource weaponSpeedToStringConverter}}" Foreground="White" FontSize="14" HorizontalAlignment="Right"/>
                     </DockPanel>
-                    <Label Name="weaponDpsLbl" Content="{Binding DamageInfo.Dps}" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
+                    <Label Name="weaponDpsLbl" Content="{Binding DamageInfo.DpsInfo}" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
                 </StackPanel>
                 <!-- Only visible on armor item -->
-                <StackPanel Name="armorPanel">
+                <StackPanel>
 
                     <TextBlock Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0" Visibility="{Binding Armor, Converter={StaticResource valueVisibilityConverter}}">
                         <TextBlock Name="itemArmorLbl" Text="{Binding Armor}" />
