--- a/TrinityCreator/ItemPage.xaml
+++ b/TrinityCreator/ItemPage.xaml
@@ -27,16 +27,16 @@
                         <Button Name="findDisplayIdBtn" Content="Find" HorizontalAlignment="Right" Margin="0,93,10,0" VerticalAlignment="Top" Width="70" Height="25" IsEnabled="False"/>
 
                         <Label FontSize="12" Content="Bounds" Height="30" Margin="0,122,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
-                        <ComboBox Name="itemBoundsCb" SelectedValue="{Binding Binds}" Height="25"  Margin="85,123,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectionChanged="itemBoundsCb_SelectionChanged"/>
+                        <ComboBox Name="itemBoundsCb" SelectedValue="{Binding Binds}" Height="25"  Margin="85,123,9,0" VerticalAlignment="Top" IsReadOnly="True"/>
 
                         <Label FontSize="12" Content="Item Class" Height="30" Margin="0,152,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
                         <ComboBox Name="itemClassCb" SelectedValue="{Binding Class}" Height="25"  Margin="85,153,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectionChanged="itemClassCb_SelectionChanged" />
 
                         <Label FontSize="12" Content="Item Subclass" Height="30" Margin="0,182,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
-                        <ComboBox Name="itemSubClassCb" SelectedValue="{Binding ItemSubClass}" Height="25" Margin="85,183,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" SelectionChanged="itemSubClassCb_SelectionChanged" />
+                        <ComboBox Name="itemSubClassCb" SelectedValue="{Binding ItemSubClass}" Height="25" Margin="85,183,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" />
 
                         <Label FontSize="12" Content="Equip" Height="30" Margin="0,213,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
-                        <ComboBox Name="inventoryTypeCb" SelectedValue="{Binding InventoryType}" Height="25" Margin="85,214,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectionChanged="inventoryTypeCb_SelectionChanged"/>
+                        <ComboBox Name="inventoryTypeCb" SelectedValue="{Binding InventoryType}" ItemsSource="{Binding ItemSubClass.LockedInventoryType}" Height="25" Margin="85,214,9,0" VerticalAlignment="Top" IsReadOnly="True" />
 
                         <Label FontSize="12" Content="Max count" Height="30" Margin="0,243,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77" ToolTip="0 is unlimited"/>
                         <TextBox Name="itemMaxCountTxt" Text="{Binding MaxAllowed, UpdateSourceTrigger=PropertyChanged}" Height="25" Margin="85,244,9,0" VerticalAlignment="Top" />
