--- a/TrinityCreator/ItemPage.xaml
+++ b/TrinityCreator/ItemPage.xaml
@@ -4,8 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Properties="clr-namespace:TrinityCreator.Properties" x:Class="TrinityCreator.ItemPage" 
+             xmlns:l="clr-namespace:TrinityCreator"
              mc:Ignorable="d" 
              d:DesignHeight="1152.55" MinWidth="655">
+    <UserControl.Resources>
+        <ObjectDataProvider x:Key="classList"
+            ObjectType="{x:Type l:ItemClass}"
+            MethodName="GetClassList" />
+    </UserControl.Resources>
 
     <Grid Background="#fff">
         <ScrollViewer Margin="0,0,380,0">
@@ -30,13 +36,13 @@
                         <ComboBox Name="itemBoundsCb" SelectedValue="{Binding Binds}" Height="25"  Margin="85,123,9,0" VerticalAlignment="Top" IsReadOnly="True"/>
 
                         <Label FontSize="12" Content="Item Class" Height="30" Margin="0,152,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
-                        <ComboBox Name="itemClassCb" SelectedValue="{Binding Class}" Height="25"  Margin="85,153,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectionChanged="itemClassCb_SelectionChanged" />
+                        <ComboBox Name="itemClassCb" SelectedValue="{Binding Class}" ItemsSource="{Binding Source={StaticResource classList}}" Height="25"  Margin="85,153,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" IsSynchronizedWithCurrentItem="True"/>
 
                         <Label FontSize="12" Content="Item Subclass" Height="30" Margin="0,182,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
-                        <ComboBox Name="itemSubClassCb" SelectedValue="{Binding ItemSubClass}" Height="25" Margin="85,183,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" />
+                        <ComboBox SelectedValue="{Binding ItemSubClass}" ItemsSource="{Binding Class.AvailableSubClasses}" Height="25" Margin="85,183,9,0" VerticalAlignment="Top" IsReadOnly="True"  SelectedIndex="0" IsSynchronizedWithCurrentItem="True"/>
 
                         <Label FontSize="12" Content="Equip" Height="30" Margin="0,213,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
-                        <ComboBox Name="inventoryTypeCb" SelectedValue="{Binding InventoryType}" ItemsSource="{Binding ItemSubClass.LockedInventoryType}" Height="25" Margin="85,214,9,0" VerticalAlignment="Top" IsReadOnly="True" />
+                        <ComboBox SelectedValue="{Binding InventoryType}" ItemsSource="{Binding ItemSubClass.LockedInventoryType}" Height="25" Margin="85,214,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" IsSynchronizedWithCurrentItem="True"/>
 
                         <Label FontSize="12" Content="Max count" Height="30" Margin="0,243,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77" ToolTip="0 is unlimited"/>
                         <TextBox Name="itemMaxCountTxt" Text="{Binding MaxAllowed, UpdateSourceTrigger=PropertyChanged}" Height="25" Margin="85,244,9,0" VerticalAlignment="Top" />
